--- a/style.css
+++ b/style.css
@@ -114,6 +114,12 @@ header{
   padding-top:100px;
   width:100%;
 }
+.responsive{
+  display:none;
+}
+.responsive-icon{
+  display:none;
+}
 .wrapper-image{
   position: relative;
   width:100%;
@@ -162,7 +168,7 @@ header{
   font-size: larger;
   font-weight: normal;
   color:rgb(72, 72, 72);
-  outline: hidden;
+  outline: transparent;
   margin-bottom: 10px;
 }
 
@@ -175,6 +181,7 @@ header{
   font-weight: normal;
   color:rgb(72, 72, 72);
   margin-right:12px;
+  outline: transparent;
 }
 .example2{
   box-sizing: border-box;
@@ -182,6 +189,7 @@ header{
   font-size: larger;
   font-weight: normal;
   color:rgb(72, 72, 72);
+  outline: transparent;
 }
 
 .charge{
@@ -261,7 +269,10 @@ section{
   text-decoration: none;
   line-height: 50px;
 }
-/* --------section 3ステップでホスティング-------- */
+.link:hover{
+  text-decoration: underline;
+  }
+/* --------section 3ステップでホスティング下部-------- */
 .contents-left-text{
   width:420px;
   margin-top: 100px;
@@ -286,6 +297,9 @@ section{
 .check a{
   color:rgb(59, 133, 138);
 }
+.check a:hover{
+  text-decoration: underline;
+  }
 .section-btn{
   padding:10px 20px;
   text-decoration: none;
@@ -317,6 +331,9 @@ section{
   text-decoration: none;
   font-size: 16px;
   font-weight: lighter;
+}
+.support-text a:hover{
+text-decoration: underline;
 }
 .support-list{
   width:400px;
@@ -384,6 +401,9 @@ section{
   font-size: 18px;
   color:rgb(59, 133, 138);
 }
+.question-list a:hover{
+  text-decoration: underline;
+}
 
 /* --------ホスティングの詳細はこちら-------- */
 .detail{
@@ -403,7 +423,127 @@ section{
 }
 .detail-list img{
   width:100%;
-  height:150px;
+  height:170px;
   overflow: hidden;
   margin:0;
+  object-fit: cover;
+}
+.details a{
+  text-decoration: none;
+  color:rgb(72, 72, 72);
+}
+.detail-list h6{
+  margin-top:20px;
+  color:rgb(72, 72, 72);
+  font-size: medium;
+}
+.detail-list p{
+  margin-top: 5px;
+  font-size: small;
+}
+.detail-list a{
+  color:rgb(59, 133, 138);
+  font-size:small;
+  margin-top:10px;
+}
+/* --------収益化してみますか？-------- */
+.bottom-wrapper{
+  width:1300px;
+  height:450px;
+  margin: 100px 0;
+  background-image: url(img/dbe25d99-6821-4e02-802f-fcd7aaef85bc.webp);
+  background-size: cover;
+}
+
+.bottom-wrapper div{
+  margin:100px;
+  display: flex;
+  flex-direction: column;
+}
+.bottom-wrapper h1{
+  width:450px;
+  font-size:60px;
+  color:white;
+  margin-bottom:50px;
+}
+.btn-footer{
+  color:rgb(72, 72, 72);
+  background-color: white;
+  font-weight: bold;
+  padding:20px 30px;
+  width:70px;
+}
+/* --------リンク集-------- */
+nav{
+  display: flex;
+  justify-content: space-between;
+  width:1000px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgb(235, 235, 235);
+  margin-bottom: 20px;
+}
+.nav-list{
+  display: flex;
+  flex-direction: column;
+  width:240px;
+}
+.nav-list li{
+  font-size: 14px;
+  color:rgb(72, 72, 72);
+}
+.nav-list li:first-child{
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.nav-list li a{
+  text-decoration: none;
+  color:rgb(156, 156, 156);
+  line-height: 24px;
+}
+.nav-list li span{
+  background-color: rgb(59, 133, 138);
+  border-radius: 4px;
+  padding:3px;
+  color:white;
+  margin-left:5px;
+}
+.nav-list li a:hover{
+  text-decoration: underline;
+}
+/* --------フッター-------- */
+footer{
+  display: flex;
+  justify-content: space-between;
+  width:1000px;
+  margin-bottom:50px;
+}
+
+.footer-left{
+  display: flex;
+  align-items: center;
+}
+.footer-left i{
+  font-size:20px;
+  color:rgb(156, 156, 156);
+  margin-right:10px;
+}
+.footer-left small a{
+  text-decoration: none;
+  color:rgb(156, 156, 156);
+  font-size:14px;
+  line-height: 16px;
+}
+.footer-left small p{
+  color:rgb(156, 156, 156);
+  font-size:14px;
+  line-height: 16px;
+}
+.footer-left small a:hover{
+  text-decoration: underline;
+}
+
+.footer-right a{
+  padding-right:10px;
+  font-size:20px;
+  color: rgb(156, 156, 156);
 }
