--- a/style.css
+++ b/style.css
@@ -107,7 +107,22 @@ header{
   color:white;
   background-color: rgb(219, 60, 66);
 }
+.header-bottom{
+  position:fixed;
+  background-color: white;
+  width:100%;
+  bottom:0;
+  height: 50px;
+  display:flex;
+  align-items: center;
+  justify-content: flex-end;
 
+  display:none;
+}
+.responsive-bottom{
+  padding:10px 10px;
+  margin-right:30px;
+}
 
 /* --------top-wrapper-------- */
 .top-wrapper{
@@ -394,10 +409,11 @@ text-decoration: underline;
   color: rgb(59, 133, 138);
   border-bottom: 1px solid rgb(235, 235, 235);
   border-collapse: separate;
+  padding:20px 0;
 }
 .question-list a{
   text-decoration: none;
-  line-height: 80px;
+  line-height: 40px;
   font-size: 18px;
   color:rgb(59, 133, 138);
 }
