--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
   flex-direction: column; 
   /* xyが入れ替わるから中央揃えはalign-items:center; */
   align-items: center;
+  overflow-x: hidden;
 }
 * p{
   font-size: 18px;
@@ -27,6 +28,9 @@ body{
   font-size: 32px;
   font-weight: lighter;
   line-height: 38px;
+}
+html{
+  overflow-x: hidden;
 }
 /* --------header-------- */
 header{
